objects/SBQQ__ConfigurationAttribute__c.object
<CustomObject>
    <customHelpPage>SBQQ__ConfigurationAttributeHelp</customHelpPage>
    <description>Product configuration attribute.</description>
    <fields>
        <fullName>SBQQ__AppliedImmediately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates changes to this configuration attribute should apply immediately.</description>
        <inlineHelpText>Check to immediately apply changes to this option. Use sparingly to avoid slow user experience.</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ColumnOrder__c</fullName>
        <description>Columns are comprised of a picklist (of 1, 2, or 3) for each Configuration Attribute.</description>
        <inlineHelpText>A maximum of 3 columns is allowed.</inlineHelpText>
        <label>Column Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>This is the order in which the Configuration Attributes will be displayed.</description>
        <inlineHelpText>If there is no display order associated with a Configuration Attribute, order is determined by Related Content name.</inlineHelpText>
        <label>Row Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature in which this attribute should be rendered.</description>
        <inlineHelpText>Specify the feature in which this attribute should be entered.</inlineHelpText>
        <label>Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Product__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Configuration Attributes</relationshipLabel>
        <relationshipName>ConfigurationAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__HiddenValues__c</fullName>
        <description>Values from the backing picklist field that should be hidden on this bundle.</description>
        <inlineHelpText>Enter values from the corresponding picklist field on Product Option object that you want to be hidden on this bundle.</inlineHelpText>
        <label>Hidden Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Position__c</fullName>
        <description>Attribute position.</description>
        <inlineHelpText>Specify position of this attribute. Top renders above the options. Bottom renders below.</inlineHelpText>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                    <default>true</default>
                    <label>Top</label>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being configured.</description>
        <inlineHelpText>Specify product on which you are creating the attribute.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configuration Attributes</relationshipLabel>
        <relationshipName>ConfigurationAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required flag.</description>
        <inlineHelpText>Specify whether this attribute requires a value.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShownValues__c</fullName>
        <description>Values from the backing picklist field that should be shown on this bundle.</description>
        <inlineHelpText>Enter values from the corresponding picklist field on Product Option object that you want to be shown on this bundle.</inlineHelpText>
        <label>Shown Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetField__c</fullName>
        <description>Field on the Product Option that sources remaining metadata and holds the value.</description>
        <inlineHelpText>Specify field on Product Option that will hold this attribute&apos;s value.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Column_Order_is_required</fullName>
        <active>true</active>
        <description>Column Order is required</description>
        <errorConditionFormula>if (Text( SBQQ__ColumnOrder__c ) == &apos;&apos;, true, false)</errorConditionFormula>
        <errorMessage>Column Order is required.</errorMessage>
    </validationRules>
</CustomObject>